<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.sandeepani.view.Teacher.SelectStudentActivity">

    <com.sandeepani.utils.TopBar1
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></com.sandeepani.utils.TopBar1>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/search_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageview"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/select_students"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/done_btn_selector"
            android:layout_centerVertical="true"
            android:text="@string/done_caps"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone" />

    </RelativeLayout>

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/searchview_selector"
        android:drawableRight="@drawable/search_small"
        android:hint="@string/start_typing_name"
        android:inputType="text"
        android:padding="5dp" />


    <TextView
        android:id="@+id/all_students_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/all_students_caps"
        android:textColor="@color/done_red_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/students_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"></ListView>

</LinearLayout>
